@@ -1,5 +1,12 @@
 2008-11-28  Behdad Esfahbod  <behdad@gnome.org>
 
+	Bug 562639 – g_parse_debug_flags() parsing "help"
+
+	* glib/gutils.c (g_parse_debug_string): Print available keys if
+	string is "help".
+
+2008-11-28  Behdad Esfahbod  <behdad@gnome.org>
+
 	Bug 562638 – GDebugKey key member should be const
 
 	* glib/gutils.h: Change GDebugKey key member from gchar * to
